FontAwesomeIcons Fix, Fix for horizontal overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,7 @@ body {
     width: 100vw;
     height: 100vh;
     position: relative;
+    overflow-x: hidden;
 }
 
 h1 {
